--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://phillips.github.io/streamship",
+  "homepage": "https://phillips.github.io/StreamShip",
   "name": "streamship",
   "version": "0.1.0",
   "private": true,
